<resources>
    <string name="app_name">OutsideJob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_fragment_description">This is a description of home Fragment</string>
    <string name="menu_tasks">Tasks</string>
    <string name="tasks_fragment_decription">Tasks fragment to be implemented</string>
    // Tasks menu
    <string name="action_tasks_all">All</string>
    <string name="action_tasks_new">New</string>
    <string name="action_tasks_completed">Completed</string>
    <string name="action_tasks_overdue">Overdue</string>
    <string name="action_tasks_suspended">Suspended</string>
</resources>